# pocket-gpt

./: .editorconfig  .gitignore  .gitmodules  .maestro-android.yaml  AGENTS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.agents/skills/debug-pocket-gpt/: SKILL.md
.agents/skills/maestro-android-cli/: SKILL.md
.agents/skills/mobile-ux-design/: SKILL.md
.claude/skills/maestro-android-cli/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly-hardware-lane.yml  nightly-validation.yml
apps/mobile-android/: README.md  build.gradle.kts
apps/mobile-android-host/: README.md  build.gradle.kts
apps/mobile-android/src/main/cpp/: CMakeLists.txt  pocket_llama.cpp  test_turboquant.cpp  turboquant.c  turboquant.h  turboquant_codebooks.h  vulkan_compat_shim.cpp
apps/mobile-ios/: README.md
config/detekt/: baseline.xml  detekt.yml
config/devctl/: device.yaml  docs-governance.json  lanes.yaml  stage2.yaml  test-profiles.yaml  test-selection.yaml
docs/: README.md
docs/architecture/: android-ui-shell-cleanup.md  error-code-registry.md  kivi-assessment.md  llama-vendor-maintenance.md  modular-monolith.md  module-boundaries.md  multi-model-platform.md  system-context.md  tech-stack-decision.md  turboquant-benchmark-plan.md  turboquant-research-learnings.md
docs/architecture/adrs/: ADR-001-monorepo-modular-monolith.md  (+4 more)
docs/feasibility/: benchmark-protocol.md  device-matrix.md  mvp-stage-execution-report.md  spike-results.md
docs/governance/: README.md  docs-accuracy-manifest.json
docs/operations/: 2026-03-04-parallel-work-plan-during-eng-13.md  README.md  doc-02-product-ux-doc-sync-timeout-cancel-send-capture.md  eng-13-unblock-checklist.md  execution-board.md  mkt-01-messaging-architecture-draft.md  mkt-02-competitor-matrix-template-draft.md  mkt-03-7-day-scorecard-template.md  mkt-03-launch-channel-test-plan-draft.md  mkt-04-demo-asset-capture-runbook.md  mkt-04-landing-page-launch-copy-v1-draft.md  mkt-07-ui-proof-asset-selection-checklist.md  mkt-07-ui-proof-messaging-map.md  mkt-08-proof-asset-capture-and-listing-finalization.md  mkt-09-channel-scorecard-run-01.md  prod-09-soft-gate-pilot-policy.md  prod-10-launch-gate-matrix.md  prod-11-pilot-support-incident-playbook.md  rebased-release-plan-2026-03-05.md  sec-02-privacy-claim-parity-audit.md  ui-ux-handoff-ticket-pack.md  wp-09-ux-feedback-taxonomy-intake-policy.md  wp-09-ux-feedback-weekly-synthesis-template.md  wp-12-handover-ticket-packet.md  wp-13-usability-gate-packet-template.md  wp-13-ux-quality-work-package.md
docs/prd/: phase-0-prd.md
docs/product/: feature-catalog.md  open-questions-log.md
docs/roadmap/: current-release-plan.md  mvp-beta-go-no-go-packet.md  mvp-implementation-tracker.md  next-steps-execution-plan.md  phase-1-mvp-plan.md  product-roadmap.md  team-workstreams.md
docs/security/: privacy-model.md  risk-register.md
docs/start-here/: adding-a-new-model.md  documentation-drift-register.md  documentation-sync-audit-2026-03-08.md  new-joiner.md  phone-setup-guide.md  resource-map.md  source-of-truth-matrix.md
docs/testing/: README.md  android-dx-and-test-playbook.md  gpu-qualification-split-plan.md  just-cli-android-validation-plan.md  maestro-android-companion-cli.md  pocketpal-parity-benchmark.md  runbooks.md  runtime-performance-e2e-playbook.md  runtime-tuning-debugging.md  screenshot-regression-workflow.md  stage-2-benchmark-runbook.md  test-lane-profiles-and-selection.md  test-strategy.md  wp-09-ui-regression-matrix.md
docs/ux/: README.md  design-system-basics.md  error-recovery-guide.md  implemented-behavior-reference.md  markdown-rendering-options.md  model-management-flow.md  onboarding-spec.md  play-store-listing-spec.md  user-journey-map.md  ux-12-recovery-journey-spec.md
research/model-optimization/: README.md  master-plan.md  org-structure.md
scripts/android/: README.md  capture_device_baseline.sh  collect_logcat.sh  configure_device_for_benchmark.sh  dev_loop.sh  ensure_device.sh  provision_sideload_models.sh  run_short_loop.sh  run_stage2_native.sh  run_stage_checks.sh
scripts/benchmarks/: README.md  aggregate.py  benchmark_parity.py  compare_pocketpal_parity.py  evaluate_thresholds.py  mock-run.csv  rank_stage2_sweep.py  result-template.csv  stage-scenarios-template.csv  validate_stage2_runtime_evidence.py
scripts/ci/: run_lifecycle_e2e.sh
scripts/dev/: README.md  bench.sh  cpu-sweep.sh  device-test.sh  docs-drift-check.sh  ensure_jvm_module_outputs.sh  evidence-check-changed.sh  evidence-check.sh  governance-self-test.sh  gpu-probe-reason-check.sh  journey.sh  maestro-cloud-gpu-benchmark.sh  maestro-cloud-gpu-model-matrix.sh  maestro-cloud-smoke.sh  maestro-cloud-upload-status.sh  maestro-gpu-matrix-common.sh  maestro-gpu-real-device-matrix.sh  nightly-hardware-check.sh  prefix-cache-regression.sh  prune-devctl-artifacts.sh  scoped-repro.sh  stage-close-gate.sh  test.sh  validate-pr-body.sh  verify.sh
scripts/marketing/: capture_mobile_demo_assets.sh
tests/maestro/: README.md  scenario-a.yaml  scenario-activation-send-smoke.yaml  scenario-b.yaml  scenario-c.yaml  scenario-download-settings-smoke.yaml  scenario-first-run-download-chat.yaml  scenario-first-run-gpu-chat.yaml  scenario-gpu-probe-status.yaml  scenario-model-remove-redownload-smoke.yaml  scenario-onboarding.yaml  scenario-session-drawer-smoke.yaml
tests/maestro-cloud/: README.md  assert_gpu_faster.js  scenario-gpu-cpu-benchmark.yaml  scenario-gpu-probe-by-model.template.yaml  scenario-model-management-split-smoke.yaml  scenario-runtime-ready-smoke.yaml  scenario-send-after-ready-smoke.yaml  scenario-session-drawer-smoke.yaml
tests/ui-screenshots/: inventory.yaml
tools/: __init__.py
tools/devctl/: __init__.py  cli.py  config_models.py  doctor.py  gates.py  generate_stage2_evidence_draft.py  governance.py  kotlin_quality_gate.py  lanes.py  main.py  reporting.py  runtime_log_signals.py  subprocess_utils.py
tools/maestro_android/: README.md  __init__.py  cli.py  common.py  config.py  main.py  reporting.py
(+538 files in other folders)
